Modyfikacja opisu w pliku README.md

--- a/file-service/src/main/resources/application.properties
+++ b/file-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #FTP CONFIG
-# ftp.server=
-# ftp.port=
-# ftp.username=
-# ftp.password=
-# ftp.origin=
+ftp.server=localhost
+ftp.port=8001
+ftp.username=sklep
+ftp.password=12345678
+ftp.origin=/home/sklep
 
 #DATABASE CONFIG
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
